Add should_generateBanner_custom